<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <EditText
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            android:hint="@string/type_email_address"
            android:gravity="center_vertical"
            android:id="@+id/emailAddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:inputType="textPassword"
            android:textSize="24sp"
            android:hint="@string/type_password"
            android:gravity="center_vertical"
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:textSize="24sp"
            android:hint="@string/repeat_password"
            android:gravity="center_vertical"
            android:id="@+id/repeatPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/signUpBtn"
            android:text="@string/sign_up"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/signInBtn"
            android:text="@string/sign_in"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>



</LinearLayout>